--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,11 +4,18 @@ body {
   font-family: Verdana;
 }
 h1 {
-  font-family: Verdana;
   font-weight: normal;
   font-size: 50px;
   color: white;
-  text-align: center;
+}
+h2 {
+  font-weight: 300;
+  font-size: 42px;
+  color: white;
+}
+.content {
+  font-size: 21;
+  color: gray;
 }
 .download-link {
   font-size: 16px;
