--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,14 +1,18 @@
 body {
-  background-color: black;
+background-color: black;
+}
+header {
+  font-family: Verdana;
+  font-weight: normal;
+  font-size: 50px;
+  text-align: center;
+  color: white;
+}
+main {
   text-align: center;
   font-family: Verdana;
 }
 h1 {
-  font-weight: normal;
-  font-size: 50px;
-  color: white;
-}
-h2 {
   font-weight: 300;
   font-size: 42px;
   color: white;
@@ -20,4 +24,10 @@ h2 {
 .download-link {
   font-size: 16px;
   color: Aquamarine;
+}
+footer {
+  font-family: Verdana;
+  text-align: right;
+  color: gray;
+  font-size: 16px;
 }
